--- a/2.1-einrichtung.md
+++ b/2.1-einrichtung.md
@@ -33,14 +33,46 @@ Der API-Key-Eintrag befindet sich im [Contentful Space](https://app.contentful.c
 - Für die Spiel-App: Space ID und Content Delivery API access token kopieren
 - Für Portal Editor: Space ID und Content Preview API access token kopieren
 
-## Importieren der Datenbank-Struktur
+## Importieren des Datenbank-Schemas
 
-Das Datenbankschema der Content-Modelle kann als JSON-Datei importiert werden. Der Import erfolgt mit der [Contentful CLI](https://www.contentful.com/developers/docs/tutorials/cli/import-and-export/). Die JSON-Datei mit dem Datenbankschema befindet sich im Repository [LINK].
+Das Datenbankschema der Content-Modelle kann als JSON-Datei importiert werden. Der Import erfolgt mit der [Contentful CLI](https://github.com/contentful/contentful-cli) ([Dokumentation](https://www.contentful.com/developers/docs/tutorials/cli/import-and-export/)).
 
-## Einrichten der Extensions
+Die Resourcen zum Datenbankschema befinden sich im Repository [03 Contentful CMS Resources](https://github.com/museum4punkt0/Object-by-Object/tree/master/03%20Contentful%20CMS%20Resources).
 
-Für das CMS wurden mehrere Contentful Extensions entwickelt. Sie müssen neu angelegt werden. Die Vorlagen befinden sich im Repository [LINK].
+Nach Installation der Content CLI und Download der Resourcen sind die nächsten Schritte in der Command Line:
 
+```
+cd path/to/resources
+```
+
+```
+contentful login
+```
+
+```
+contentful space list
+```
+
+Die angezeigte Space ID hier eintragen:
+
+```
+contentful space use <Space ID>
+```
+
+```
+contentful space import --content-file export.json
+```
+
+```
+contentful extension create --id 3P46UsGOZLvTS1I6f736cI --name "ENUM Link Object Type" --field-types Symbol --srcdoc extensions/extension_ENUM_Link_Object_Type.html
+contentful extension create --id 1MVkPIZAlZmpisc8ia0G9v --name "ENUM Story Color" --field-types Symbol --srcdoc extensions/extension_ENUM_Story_Color.html
+contentful extension create --id dpD5Hy3r5HPextp7tOn4J --name "Bool (false)" --field-types Boolean --srcdoc extensions/extension_Bool_false.html
+contentful extension create --id 7BPZSATAe4N8M9PhluqAjw --name "ENUM Container Type" --field-types Symbol --srcdoc extensions/extension_ENUM_Container_Type.html
+contentful extension create --id 34bFqaY9FkZDm9KmyGr0XK --name "ENUM Anchor Alignment" --field-types Symbol --srcdoc extensions/extension_ENUM_Anchor_Alignment.html
+contentful extension create --id 3IYBwhYMMsWS0LYZ8FWFyR --name "ENUM Fragmentation" --field-types Integer --srcdoc extensions/extension_ENUM_Fragmentation.html
+```
+
+Nach Ausloggen aus Contentful im Browser und Wiedereinloggen steht das Datenbankschema zur Verfügung.
 
 
 ## Befüllung des CMS
