--- a/2.1-einrichtung.md
+++ b/2.1-einrichtung.md
@@ -60,7 +60,7 @@ contentful space use <Space ID>
 ```
 
 ```
-contentful space import --content-file export.json
+contentful space import --content-file database_scheme.json
 ```
 
 ```
