--- a/2.2-cms-struktur.md
+++ b/2.2-cms-struktur.md
@@ -137,8 +137,8 @@ Hiervon sollte nur ein singulärer Eintrag als Ausgangspunkt der Datenbank exist
 | :------------- | :------------- | :------------- |
 | ![Camera](/img/pe_camera.png)       | ![Gramophone](/img/pe_gramophone.png)       | ![Picture Frame](/img/pe_film.png)       |
 | Medientyp: Foto       | Medientyp: Audio     | Medientyp: Video |
-| Dateiformat: `.jpg`, `.png` | Dateiformat: `.mp3`, `.wav` | Dateiformat: `.mov`, `.mp4`, '.m4v' |
-| Empfohlene Größe: abhängig davon aus welcher Ferne die User/in das Bild betrachten soll; Faustregel sind 4-5 Megapixel pro Bild        | Empfohlene Größe: ...     | Empfohlene Größe: ... |
+| Dateiformat: `.jpg`, `.png` | Dateiformat: `.mp3`, `.wav` | Dateiformat: `.mov`, `.mp4`, `.m4v` |
+| Empfohlene Größe: abhängig davon aus welcher Ferne die User/in das Bild betrachten soll; Faustregel sind 4-5 Megapixel pro Bild        | Empfohlene Größe: Wird gestreamt, also keine Limitierung     | Empfohlene Größe: Full HD; 4K theoretisch möglich, kann aber ruckeln |
 
 
 | Slide Projector     | Slide Projector with Screen     |
