--- a/2.1-einrichtung.md
+++ b/2.1-einrichtung.md
@@ -48,6 +48,7 @@ cd path/to/resources
 ```
 contentful login
 ```
+Ein Browserfenster wird geöffnet, Access Token vom Browser in die Commandline kopieren.
 
 ```
 contentful space list
@@ -58,6 +59,7 @@ Die angezeigte Space ID hier eintragen:
 ```
 contentful space use <Space ID>
 ```
+(Auswahl mit Enter bestätigen)
 
 ```
 contentful space import --content-file database_scheme.json
@@ -73,8 +75,3 @@ contentful extension create --id 3IYBwhYMMsWS0LYZ8FWFyR --name "ENUM Fragmentati
 ```
 
 Nach Ausloggen aus Contentful im Browser und Wiedereinloggen steht das Datenbankschema zur Verfügung.
-
-
-## Befüllung des CMS
-
-Die Befüllung des CMS erfolgt im Bereich __Content__ Bereich des Contentful Space.
