--- a/2.2-cms-struktur.md
+++ b/2.2-cms-struktur.md
@@ -125,20 +125,26 @@ Hiervon sollte nur ein singulärer Eintrag als Ausgangspunkt der Datenbank exist
 
 ### Container Type: Containertyp
 
-| Self-Contained     | Paper     | Picture Frame     |
-| :------------- | :------------- | :------------- |
-| ![Self-contained](/img/pe_self_contained.png)       | ![Paper](/img/pe_paper.png)       | ![Picture Frame](/img/pe_picture_frame.png)       |
-| Medientyp: 3D-Datei       | Medientyp: Foto     | Medientyp: Foto |
-| Dateiformat: `.usdz`, `.scn`       | Dateiformat: `.jpg`, `.png`      | Dateiformat: `.jpg`, `.png`      |
-| Empfohlene Größe: max. 10 MB; darüber hinaus experimentell | Empfohlene Größe: abhängig davon aus welcher Ferne die User/in das Bild betrachten soll; Faustregel sind 4-5 Megapixel pro Bild | Empfohlene Größe: abhängig davon aus welcher Ferne die User/in das Bild betrachten soll; Faustregel sind 4-5 Megapixel pro Bild
+| Self-Contained     | Paper     |
+| :------------- | :------------- |
+| ![Self-contained](/img/pe_self_contained.png)       | ![Paper](/img/pe_paper.png)       |
+| Medientyp: 3D-Datei       | Medientyp: Foto     |
+| Dateiformat: `.usdz`, `.scn`       | Dateiformat: `.jpg`, `.png`      |
+| Empfohlene Größe: max. 10 MB; darüber hinaus experimentell | Empfohlene Größe: abhängig davon aus welcher Ferne die User/in das Bild betrachten soll; Faustregel sind 4-5 Megapixel pro Bild |
 
+| Picture Frame     | Camera on Tripod     |
+| :------------- | :------------- |
+| ![Picture Frame](/img/pe_picture_frame.png)       | ![Camera](/img/pe_camera.png)       |
+| Medientyp: Foto | Medientyp: Foto       |
+| Dateiformat: `.jpg`, `.png`      | Dateiformat: `.jpg`, `.png` |
+| Empfohlene Größe: abhängig davon aus welcher Ferne die User/in das Bild betrachten soll; Faustregel sind 4-5 Megapixel pro Bild | Empfohlene Größe: abhängig davon aus welcher Ferne die User/in das Bild betrachten soll; Faustregel sind 4-5 Megapixel pro Bild        |
 
-| Camera on Tripod     | Gramophone     | Film     |
-| :------------- | :------------- | :------------- |
-| ![Camera](/img/pe_camera.png)       | ![Gramophone](/img/pe_gramophone.png)       | ![Picture Frame](/img/pe_film.png)       |
-| Medientyp: Foto       | Medientyp: Audio     | Medientyp: Video |
-| Dateiformat: `.jpg`, `.png` | Dateiformat: `.mp3`, `.wav` | Dateiformat: `.mov`, `.mp4`, `.m4v` |
-| Empfohlene Größe: abhängig davon aus welcher Ferne die User/in das Bild betrachten soll; Faustregel sind 4-5 Megapixel pro Bild        | Empfohlene Größe: Wird gestreamt, also keine Limitierung     | Empfohlene Größe: Full HD; 4K theoretisch möglich, kann aber ruckeln |
+| Gramophone     | Film     |
+| :------------- | :------------- |
+| ![Gramophone](/img/pe_gramophone.png)       | ![Picture Frame](/img/pe_film.png)       |
+| Medientyp: Audio     | Medientyp: Video |
+| Dateiformat: `.mp3`, `.wav` | Dateiformat: `.mov`, `.mp4`, `.m4v` |
+| Empfohlene Größe: Wird gestreamt, also keine Limitierung     | Empfohlene Größe: Full HD; 4K theoretisch möglich, kann aber ruckeln |
 
 
 | Slide Projector     | Slide Projector with Screen     |
