--- a/2.1-einrichtung.md
+++ b/2.1-einrichtung.md
@@ -11,7 +11,7 @@ nav_order: 1
 
 Einrichtung eines Accounts und eines Workspace (Space), falls noch nicht vorhanden, wird [hier](https://www.contentful.com/help/contentful-101/#step-1-get-an-account) erklärt.
 
-__WICHTIG__: Die Default Locale des Space muss auf de-DE gestellt werden unter
+__WICHTIG: Die Default Locale des Space muss auf de-DE gestellt werden unter Settings > Locales__
 
 ## API-Key
 
@@ -39,16 +39,22 @@ Das Datenbankschema der Content-Modelle kann als JSON-Datei importiert werden. D
 
 Die Resourcen zum Datenbankschema befinden sich im Repository [03 Contentful CMS Resources](https://github.com/museum4punkt0/Object-by-Object/tree/master/03%20Contentful%20CMS%20Resources).
 
-Nach Installation der Content CLI und Download der Resourcen sind die nächsten Schritte in der Command Line:
+Nach Installation der Content CLI und Download der Resourcen folgen die nächsten Schritte in der Command Line.
+
+Wechsel in den Resourcen-Ordner:
 
 ```
 cd path/to/resources
 ```
 
+Login:
+
 ```
 contentful login
 ```
 Ein Browserfenster wird geöffnet, Access Token vom Browser in die Commandline kopieren.
+
+Anzeigen der Space ID:
 
 ```
 contentful space list
@@ -61,9 +67,7 @@ contentful space use <Space ID>
 ```
 (Auswahl mit Enter bestätigen)
 
-```
-contentful space import --content-file database_scheme.json
-```
+Nun werden zunächst die benötigten Extensions erstellt:
 
 ```
 contentful extension create --id 3P46UsGOZLvTS1I6f736cI --name "ENUM Link Object Type" --field-types Symbol --srcdoc extensions/extension_ENUM_Link_Object_Type.html
@@ -72,6 +76,12 @@ contentful extension create --id dpD5Hy3r5HPextp7tOn4J --name "Bool (false)" --f
 contentful extension create --id 7BPZSATAe4N8M9PhluqAjw --name "ENUM Container Type" --field-types Symbol --srcdoc extensions/extension_ENUM_Container_Type.html
 contentful extension create --id 34bFqaY9FkZDm9KmyGr0XK --name "ENUM Anchor Alignment" --field-types Symbol --srcdoc extensions/extension_ENUM_Anchor_Alignment.html
 contentful extension create --id 3IYBwhYMMsWS0LYZ8FWFyR --name "ENUM Fragmentation" --field-types Integer --srcdoc extensions/extension_ENUM_Fragmentation.html
+```
+
+Schließlich kann das Datenbankschema importiert werden:
+
+```
+contentful space import --content-file database_scheme.json
 ```
 
 Nach Ausloggen aus Contentful im Browser und Wiedereinloggen steht das Datenbankschema zur Verfügung.
